Atualizações de pastas e README

--- a/code/MINI_SUMO_2025/platformio.ini
+++ b/code/MINI_SUMO_2025/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
-platform = espressif32  ; <--- Altere caso não esteja usando ESP32
-board = esp32dev        ; <--- Altere caso não esteja usando ESP32
+[env:esp32doit-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
 framework = arduino
