--- a/code/MINI_SUMO_2025/platformio.ini
+++ b/code/MINI_SUMO_2025/platformio.ini
@@ -8,7 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
-platform = espressif32
-board = esp32doit-devkit-v1
+[env:esp32dev]
+platform = espressif32@6.10.0
+board = esp32dev
 framework = arduino
+; reupload of https://github.com/ricardoquesada/esp32-arduino-lib-builder/releases/download/4.1.0/esp32-bluepad32-4.1.0.zip
+; but with package.json's "name" field renamed back to framework-arduinoespressif32
+platform_packages =
+   framework-arduinoespressif32@https://github.com/maxgerhardt/pio-framework-bluepad32/archive/refs/heads/main.zipp
