--- a/code/MINI_SUMO_2025/platformio.ini
+++ b/code/MINI_SUMO_2025/platformio.ini
@@ -15,4 +15,6 @@ framework = arduino
 ; reupload of https://github.com/ricardoquesada/esp32-arduino-lib-builder/releases/download/4.1.0/esp32-bluepad32-4.1.0.zip
 ; but with package.json's "name" field renamed back to framework-arduinoespressif32
 platform_packages =
-   framework-arduinoespressif32@https://github.com/maxgerhardt/pio-framework-bluepad32/archive/refs/heads/main.zipp
+   framework-arduinoespressif32@https://github.com/maxgerhardt/pio-framework-bluepad32/archive/refs/heads/main.zip
+
+monitor_speed = 115200
